define file structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>boilerplate react redux and auth</title>
+  <link type="text/css" rel="stylesheet" href="/main.css">
 </head>
 <body>
   <!-- create div for web app to be rendered in -->
