add font & favicon

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>boilerplate react redux and auth</title>
-  <link type="text/css" rel="stylesheet" href="/main.css">
+  <title>Leandra's Learning App</title>
+  <link href="/android-chrome-512x512.png" type="image/png" rel="icon">
+  <link href="https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap" rel="stylesheet">
+  <link href="/main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <!-- create div for web app to be rendered in -->
