--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leandra's Learning App</title>
   <link href="/android-chrome-512x512.png" type="image/png" rel="icon">
-  <link href="https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700;1,900&display=swap" rel="stylesheet">
   <link href="/main.css" type="text/css" rel="stylesheet">
 </head>
 <body>
