add stlyes to memory game components

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link href="/android-chrome-512x512.png" type="image/png" rel="icon">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700;1,900&display=swap" rel="stylesheet">
   <link href="/main.css" type="text/css" rel="stylesheet">
-  <script src="https://use.fontawesome.com/756d7b9738.js"></script>
+  <script src="https://kit.fontawesome.com/e1bb74b659.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <!-- create div for web app to be rendered in -->
